# 223PA1

./: .gitignore  CMakeLists.txt  README.md
src/: .clang-format  .gitignore  CMakeLists.txt  game.cpp  game.h  list.h  main.cpp  profile.cpp  profile.h
